# Attach-

./: LICENSE  README.md  package-lock.json  package.json  test-commands.js  tsconfig.json  vite.config.ts
.github/workflows/: rust_test.yml
src/: App.tsx  main.tsx  store.ts  types.ts
src-tauri/: Cargo.toml  brief-case.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  execution.rs  lib.rs  main.rs  screenshot.rs  state.rs  storage.rs  workspace.rs
src-tauri/src/ProjectErrors/: mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/models/: brief_case.rs  mod.rs  profile.rs  social_media.rs  task.rs
src-tauri/src/profile/: mod.rs
src-tauri/src/project_errors/: mod.rs
src-tauri/src/state/: mod.rs
src-tauri/src/storage/: config.rs  file_errors.rs  mod.rs
src-tauri/src/task/: mod.rs
src-tauri/src/tests/: brief_case_tests.rs  mod.rs  profile_tests.rs  storage_test.rs
src/api/: tauriCommands.ts
src/components/Panel/: Panel.tsx
src/components/ScreenshotBay/: ScreenshotBay.tsx
src/components/StorageBay/: StorageBay.tsx
src/components/modals/: AddBriefcaseModal.tsx  AddProfileModal.tsx
src/components/profiles/: BriefcaseItem.tsx  MetricsHeader.tsx  ProfileCard.tsx
src/components/tasks/: TaskManager.tsx
src/components/ui/: ErrorSystem.ts  TabNavigation.tsx
src/utils/: platformConfig.ts
